crates/cuda-macros/tests/compile_fail/launch_contract_reordered_disjoint_alias.stderr
error[E0277]: the trait bound `for<'__cuda_oxide_disjoint> cuda_device::DisjointSlice<'__cuda_oxide_disjoint, u64>: cuda_device::__LaunchContractDisjointSlice<cuda_device::Index1D, 1>` is not satisfied
  --> tests/compile_fail/launch_contract_reordered_disjoint_alias.rs:23:20
   |
23 |     let _ = module.prepare_reordered(cuda_core::LaunchConfig1D::new(1, 64, 0));
   |                    ^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
   = help: the trait `for<'__cuda_oxide_disjoint> cuda_device::__LaunchContractDisjointSlice<cuda_device::Index1D, 1>` is not implemented for `cuda_device::DisjointSlice<'__cuda_oxide_disjoint, u64>`
   = help: the following other types implement trait `cuda_device::__LaunchContractDisjointSlice<Element, DOMAIN>`:
             `cuda_device::DisjointSlice<'_, T, Index2D<ROW_STRIDE>>` implements `cuda_device::__LaunchContractDisjointSlice<T, 1>`
             `cuda_device::DisjointSlice<'_, T, Index2D<ROW_STRIDE>>` implements `cuda_device::__LaunchContractDisjointSlice<T, 2>`
             `cuda_device::DisjointSlice<'_, T, LinearTiles<N>>` implements `cuda_device::__LaunchContractDisjointSlice<T, 1>`
             `cuda_device::DisjointSlice<'_, T, RowMajorTiles<ROWS, COLS, ROW_STRIDE>>` implements `cuda_device::__LaunchContractDisjointSlice<T, 2>`
             `cuda_device::DisjointSlice<'_, T, Runtime2DIndex>` implements `cuda_device::__LaunchContractDisjointSlice<T, 1>`
             `cuda_device::DisjointSlice<'_, T, Runtime2DIndex>` implements `cuda_device::__LaunchContractDisjointSlice<T, 2>`
             `cuda_device::DisjointSlice<'_, T>` implements `cuda_device::__LaunchContractDisjointSlice<T, 1>`
note: required by a bound in `LoadedModule::prepare_reordered`
  --> tests/compile_fail/launch_contract_reordered_disjoint_alias.rs:11:1
   |
11 | #[cuda_module]
   | ^^^^^^^^^^^^^^ required by this bound in `LoadedModule::prepare_reordered`
...
17 |     pub fn reordered(mut out: DisjointSlice<Index1D, u64>) {
   |            --------- required by a bound in this associated function
   = note: this error originates in the attribute macro `cuda_module` (in Nightly builds, run with -Z macro-backtrace for more info)
